<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#28af4e"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/description"
                android:textColor="#ffffff"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-25dp"
        app:cardBackgroundColor="#00000000"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textPersonName"
                android:padding="16dp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:layout_height="55dp"
                android:textSize="16sp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:background="#28af4e"
                android:textAllCaps="false"
                android:onClick="login"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>